Refactoring the swagger documentation and rest controller
