# src/main/java/com/tbproject/challenge/dto/OperatorResponse.java
@@ -1,29 +1,40 @@
 package com.tbproject.challenge.dto;
 
-import javax.validation.Valid;
-
-
-import io.swagger.annotations.*;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
 
+/**
+ * OperatorResponse
+ */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-11-18T23:54:00.718Z")
 
-public class OperatorResponse {
-  private @Valid String operator = null;
+public class OperatorResponse   {
+  @JsonProperty("operator")
+  private String operator = null;
 
-  /**
-   **/
   public OperatorResponse operator(String operator) {
     this.operator = operator;
     return this;
   }
 
-  
+  /**
+   * Get operator
+   * @return operator
+  **/
   @ApiModelProperty(example = "RD", value = "")
-  @JsonProperty("operator")
+
+
   public String getOperator() {
     return operator;
   }
+
   public void setOperator(String operator) {
     this.operator = operator;
   }
@@ -38,7 +49,7 @@ public class OperatorResponse {
       return false;
     }
     OperatorResponse operatorResponse = (OperatorResponse) o;
-    return Objects.equals(operator, operatorResponse.operator);
+    return Objects.equals(this.operator, operatorResponse.operator);
   }
 
   @Override
@@ -49,7 +60,7 @@ public class OperatorResponse {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class InlineResponse200 {\n");
+    sb.append("class OperatorResponse {\n");
     
     sb.append("    operator: ").append(toIndentedString(operator)).append("\n");
     sb.append("}");
@@ -67,3 +78,4 @@ public class OperatorResponse {
     return o.toString().replace("\n", "\n    ");
   }
 }
+
