# src/main/java/com/tbproject/challenge/dto/VehiclePositionResponse.java
@@ -1,68 +1,63 @@
 package com.tbproject.challenge.dto;
 
-import javax.validation.Valid;
-
-
-import io.swagger.annotations.*;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
 
+/**
+ * VehiclePositionResponse
+ */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-11-18T23:54:00.718Z")
 
-public class VehiclePositionResponse {
-  private @Valid String vehicleId = null;
-  private @Valid String longitude = null;
-  private @Valid String latitude = null;
+public class VehiclePositionResponse   {
+  @JsonProperty("longitude")
+  private String longitude = null;
 
-  /**
-   **/
-  public VehiclePositionResponse vehicleId(String vehicleId) {
-    this.vehicleId = vehicleId;
-    return this;
-  }
+  @JsonProperty("latitude")
+  private String latitude = null;
 
-  
-  @ApiModelProperty(example = "345241", value = "")
-  @JsonProperty("vehicleId")
-
-  public String getVehicleId() {
-    return vehicleId;
-  }
-  public void setVehicleId(String vehicleId) {
-    this.vehicleId = vehicleId;
-  }
-
-  /**
-   **/
   public VehiclePositionResponse longitude(String longitude) {
     this.longitude = longitude;
     return this;
   }
 
-  
+  /**
+   * Get longitude
+   * @return longitude
+  **/
   @ApiModelProperty(example = "-6.257359", value = "")
-  @JsonProperty("longitude")
+
 
   public String getLongitude() {
     return longitude;
   }
+
   public void setLongitude(String longitude) {
     this.longitude = longitude;
   }
 
-  /**
-   **/
   public VehiclePositionResponse latitude(String latitude) {
     this.latitude = latitude;
     return this;
   }
 
-  
+  /**
+   * Get latitude
+   * @return latitude
+  **/
   @ApiModelProperty(example = "53.373501", value = "")
-  @JsonProperty("latitude")
+
 
   public String getLatitude() {
     return latitude;
   }
+
   public void setLatitude(String latitude) {
     this.latitude = latitude;
   }
@@ -77,22 +72,20 @@ public class VehiclePositionResponse {
       return false;
     }
     VehiclePositionResponse vehiclePositionResponse = (VehiclePositionResponse) o;
-    return Objects.equals(vehicleId, vehiclePositionResponse.vehicleId) &&
-        Objects.equals(longitude, vehiclePositionResponse.longitude) &&
-        Objects.equals(latitude, vehiclePositionResponse.latitude);
+    return Objects.equals(this.longitude, vehiclePositionResponse.longitude) &&
+        Objects.equals(this.latitude, vehiclePositionResponse.latitude);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(vehicleId, longitude, latitude);
+    return Objects.hash(longitude, latitude);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class InlineResponse2003 {\n");
+    sb.append("class VehiclePositionResponse {\n");
     
-    sb.append("    vehicleId: ").append(toIndentedString(vehicleId)).append("\n");
     sb.append("    longitude: ").append(toIndentedString(longitude)).append("\n");
     sb.append("    latitude: ").append(toIndentedString(latitude)).append("\n");
     sb.append("}");
@@ -110,3 +103,4 @@ public class VehiclePositionResponse {
     return o.toString().replace("\n", "\n    ");
   }
 }
+
