# src/main/java/com/tbproject/challenge/dto/VehicleStopResponse.java
@@ -1,49 +1,63 @@
 package com.tbproject.challenge.dto;
 
-import javax.validation.Valid;
-
-
-import io.swagger.annotations.*;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
 
+/**
+ * VehicleStopResponse
+ */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-11-18T23:54:00.718Z")
 
-public class VehicleStopResponse {
-  private @Valid String vehicleId = null;
-  private @Valid Boolean atStop = null;
+public class VehicleStopResponse   {
+  @JsonProperty("vehicleId")
+  private String vehicleId = null;
 
-  /**
-   **/
+  @JsonProperty("atStop")
+  private Boolean atStop = null;
+
   public VehicleStopResponse vehicleId(String vehicleId) {
     this.vehicleId = vehicleId;
     return this;
   }
 
-  
-  @ApiModelProperty(example = "345241", value = "")
-  @JsonProperty("vehicleId")
+  /**
+   * Get vehicleId
+   * @return vehicleId
+  **/
+  @ApiModelProperty(example = "12233", value = "")
+
 
   public String getVehicleId() {
     return vehicleId;
   }
+
   public void setVehicleId(String vehicleId) {
     this.vehicleId = vehicleId;
   }
 
-  /**
-   **/
   public VehicleStopResponse atStop(Boolean atStop) {
     this.atStop = atStop;
     return this;
   }
 
-  
+  /**
+   * Get atStop
+   * @return atStop
+  **/
   @ApiModelProperty(example = "true", value = "")
-  @JsonProperty("atStop")
+
 
   public Boolean isAtStop() {
     return atStop;
   }
+
   public void setAtStop(Boolean atStop) {
     this.atStop = atStop;
   }
@@ -58,8 +72,8 @@ public class VehicleStopResponse {
       return false;
     }
     VehicleStopResponse vehicleStopResponse = (VehicleStopResponse) o;
-    return Objects.equals(vehicleId, vehicleStopResponse.vehicleId) &&
-        Objects.equals(atStop, vehicleStopResponse.atStop);
+    return Objects.equals(this.vehicleId, vehicleStopResponse.vehicleId) &&
+        Objects.equals(this.atStop, vehicleStopResponse.atStop);
   }
 
   @Override
@@ -70,7 +84,7 @@ public class VehicleStopResponse {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class InlineResponse2002 {\n");
+    sb.append("class VehicleStopResponse {\n");
     
     sb.append("    vehicleId: ").append(toIndentedString(vehicleId)).append("\n");
     sb.append("    atStop: ").append(toIndentedString(atStop)).append("\n");
@@ -89,3 +103,4 @@ public class VehicleStopResponse {
     return o.toString().replace("\n", "\n    ");
   }
 }
+
